[project]
name = "gpu-exporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "nvidia-ml-py>=12.570.86",
    "prometheus-client>=0.21.1",
    "psutil>=7.0.0",
    "uvicorn>=0.34.0",
]
